doc: avoid hiding by navigation bar in anchor jumping in 17.x

--- a/doc/api_assets/style.css
+++ b/doc/api_assets/style.css
@@ -60,9 +60,16 @@
 }
 
 /*--------------------- Layout and Typography ----------------------------*/
+@media (prefers-reduced-motion: no-preference) {
+  html {
+    scroll-behavior: smooth;
+  }
+}
+
 html {
   font-size: 1rem;
   overflow-wrap: break-word;
+  scroll-padding-top: 55px;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   -webkit-font-variant-ligatures: none;
